--- a/inicio/stylelogin.css
+++ b/inicio/stylelogin.css
@@ -1,289 +1,157 @@
-a{
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background: #f0f4f3;
+    font-family: 'Roboto', sans-serif;
+}
+.button {
+    border: 1px solid #fff;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding: 15px 60px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+    background: #f4f8f7;
+    border: none;
+    font-weight: 300;
+    margin: 5px;
+    padding: 10px;
+    width: 280px;
+}
+.submit-btn {
+    border: none;
+    border-radius: 25px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 11px;
+    letter-spacing: 1px;
+    margin-top: 20px;
+    padding: 15px 50px;
+    text-transform: uppercase;
+}
+#login .submit-btn {
+    background: #007bff;
+}
+#register .submit-btn {
+    background: #2990ff;
+}
+#container {
+    background: #ededed;
+    border-radius: 10px;
+    height: 550px;
+    margin: 5% auto;
+    overflow: hidden;
+    width: 1000px;
+}
+.social-login {
+    border: 1px solid #ccc;
+    border-radius: 50px;
+    height: 15px;
+    padding: 10px;
+    width: 15px;
+}
+#login {
+    background: #fff;
+    float: left;
+    height: 100%;
+    position: relative;
+    width: 50%;
+    text-align: center;
+    top: -550px;
+    z-index: 1;
+}
+#register {
+    background: #fff;
+    float: right;
+    height: 100%;
+    position: relative;
+    width: 50%;
+    text-align: center;
+    top: -550px;
+    z-index: 1;
+}
+#login h1,
+#register h1 {
+    padding: 20% 0 25px;
+}
+#login h1 {
+    color: #007bff;
+}
+#register h1 {
+    color: #2990ff;
+}
+#login p,
+#register p {
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 0.3px;
+    padding: 20px;
+}
+#forgot-pass {
+    border-bottom: 1px solid #ccc;
+    color: #000;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+    padding: 3px;
     text-decoration: none;
 }
-.contenedor{
-    position: absolute;
-    top: 2.5vw;
-    left: 6%;
-    width: 88%;
-    height: 90%;
-    background-color: white;
-    box-shadow: 0 2.5px 10px 0.5px #d2d1dd;
-    border-radius: 10px 10px 10px 10px;
-    z-index: 2;
-}
-
-.contenedorcolor{
-    position: absolute;
-    top: 0.8vw;
-    left: 0.8vw;
-    width: 98%;
-    height: 41vw;
-    background-color: transparent;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    z-index: 2;
-}
-
-.contenedorcolor .contenedor-pasar{
-    width: 30vw;
-    height: 41vw;
-    background-color: #7462C2;
-    border-radius: 10px 10px 10px 10px;
-    z-index: 2;
-
-}
-
-.puntos{
-    position: absolute;
-    top: 39vw;
-    left: 9vw;
-    width: 12vw;
-    height: 2vw;
-    background-color: transparent;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-}
-
-.puntos .punto2{
+#cover {
+    background:#007bff;
+    color: #fff;
+    height: 550px;
+    margin: 0 0 0 50%;
     position: relative;
-    margin-left: 0.6vw;
-    width: 0.6vw;
-    height: 0.6vw;
-    background-color:white;
-    border-radius: 50px;
-    opacity: 0.5;
-}
-
-.puntos .punto2.activo{
-    opacity: 1;
-}
-
-
-
-.contenedor-blanco{
-    position: absolute;
-    top: 0.7vw;
-    left: 29.6vw;
-    width: 58vw;
-    height: 41.5vw;
-    background-color: white;
-    border-radius: 10px 10px 10px 10px;;
+    text-align: center;
+    transition: margin 0.7s, background 0.5s, display 1s, width 1s;
+    width: 50%;
     z-index: 5;
-    display: flex;
-    align-items:center;
-    flex-direction: column;
 }
-
-.titulo{
-    position: relative;
-    margin: 4vw 3vw;
-    width: 100%;
-    font-family: letras2;
-    font-size: 1.8vw;
-    text-align: center;
-    color: #191950;
+#cover h1 {
+    padding-top: 38%;
 }
-
-.descripcion{
-    position: relative;
-    margin-top: -3.5vw;
-    width: 100%;
-    font-family: letras;
-    font-size: 1vw;
-    text-align: center;
+#cover p {
+    font-weight: 300;
+    line-height: 22px;
+    padding: 30px 45px 40px;
 }
-
-.tipo{
-    position: absolute;
-    margin-top: 11vw;
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.tipo1{
-    position: relative;
-    width: 12vw;
-    height: 7vw;
-    background-color: white;
-    border: #d2d1dd solid 1px;
-    border-radius: 8px;
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    justify-content: center;
-    transition: 0.5s ease;
-}
-
-.tipo1:hover{
-    border-bottom: #593ae6 solid 1px;
-    border-right: #593ae6 solid 1px;
-    border-top: #593ae6 solid 1px;
-    border-left: #593ae6 solid 1px;
-}
-
-.tipo2{
-    margin-left: 0.8vw;
-    position: relative;
-    width: 12vw;
-    height: 7vw;
-    background-color: white;
-    border: #d2d1dd solid 1px;
-    border-radius: 8px;
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    justify-content: center;
-    transition: 0.5;
-}
-
-.tipo2:hover{
-    border-bottom: #593ae6 solid 1px;
-    border-right: #593ae6 solid 1px;
-    border-top: #593ae6 solid 1px;
-    border-left: #593ae6 solid 1px;
-}
-
-.imgd{
-    margin-top: 1.8vw;
-    width: 2vw;
-    height: 2vw;
-    display: block;
-}
-
-.imgd2{
-    margin-top: 1.8vw;
-    width: 2vw;
-    height: 2vw;
+.sign-in {
     display: none;
 }
-.texto{
-    font-family: letras;
-    font-size: 1.1vw;
-    margin-top: -1.5vw;
-    color: #d2d1dd
-    
-}
-
-#respuesta{
-    position: absolute;
-    top: 19vw;
-    left: 14vw;
-    width: 30vw;
-    height: 20vw;
-    background-color: white;
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    justify-content: center;
-}
-form{
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    justify-content: center;
-}
-.label2{
-    font-family: letras;
-    font-size: 1.1vw;
-    margin-top: -3.5vw;
-    color: #d2d1dd;
-    margin-left: -17.5vw;
-}
-
-.label3{
-    font-family: letras;
-    font-size: 1.1vw;
-    margin-top: 1.0vw;
-    color: #d2d1dd;
-    margin-left: -16.0vw;
-}
-
-.inputs{
-    margin-top: -1vw;
-    width: 22vw;
-    height: 2.5vw;
-    border: #c3c2cc solid 1px;
-    border-radius: 10px;
-    outline: 0;
-    font-family: letras;
-    color: #d2d1dd;
-    font-size: 1vw;
-    padding-left: 2vw;
-}
-
-.inputs2{
-    margin-top: -1vw;
-    width: 22vw;
-    height: 2.5vw;
-    border: #c3c2cc solid 1px;
-    border-radius: 10px;
-    outline: 0;
-    font-family: letras;
-    color: #d2d1dd;
-    font-size: 1vw;
-    padding-left: 2vw;
-}
-
-.descripcion2{
+.sub {
     position: relative;
-    margin-top: 1vw;
-    font-family: letras;
-    font-size: 1vw;
-    color:  #FFC212;
+    top: -11px;
 }
-
-.boton{
-    margin-top: 1vw;
-    width: 15vw;
-    height: 2.5vw;
-    background-color: #5a3ae6d0;
-    font-family: letras2;
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
+#cover:target {
+    background: #007bff;
+    margin: 0;
 }
-
-.pb{
-    margin-top: -2.3vw;
-    font-family: letras2;
-    color: rgb(255, 255, 255);
+#cover:target .sign-up {
+    display: none;
 }
-
-.inputs:focus{
-    border: #593ae6 solid 1.2px;
+#cover:target .sign-in {
+    display: inline-block;
 }
-
-.inputs2:focus{
-    border: #593ae6 solid 1.2px;
+#cover:target .login-div {
+    width: 35%;
 }
-
-.logo{
-    position: absolute;
-    top: 1vw;
-    left: 1.2vw;
-    width: 3.2vw;
-    height: 3.2vw;
-    z-index: 10;
+#credit {
+    color: #999;
+    font-size: 14px;
 }
-
-.logo_2{
-    position: absolute;
-    top: 1vw;
-    left: 5vw;
-    font-size: 1vw ;
-    font-family: letras3;
-    z-index: 5;
-    color: white;
+#info {
+    background: #eaeaea;
+    color: #555;
+    padding: 20px;
+    text-align: center;
 }
-
-
-
-
