--- a/inicio/assets/css/style.css
+++ b/inicio/assets/css/style.css
@@ -661,7 +661,8 @@ section {
 
 #services .icon {
   position: absolute;
-  left: -15px;
+  transform: scale(0.7);
+  left: 2px;
   top: calc(50% - 32px);
 }
 
