--- a/otro/assets/css/style.css
+++ b/otro/assets/css/style.css
@@ -768,7 +768,7 @@ h6 {
 }
 
 .dashboard .filter .icon {
-  color: #aab7cf;
+  color: #1855c5;
   padding-right: 20px;
   padding-bottom: 5px;
   transition: 0.3s;
