arreglo de boton

--- a/otro/assets/css/style.css
+++ b/otro/assets/css/style.css
@@ -1231,3 +1231,14 @@ h6 {
   font-size: 13px;
   color: #012970;
 }
+
+.btn-custom-orange {
+  color: orange;
+  border-color: orange;
+}
+
+.btn-custom-orange:hover {
+  color: #fff;
+  background-color: darkorange;
+  border-color: darkorange;
+}
