--- a/otro/assets/css/style.css
+++ b/otro/assets/css/style.css
@@ -1242,3 +1242,15 @@ h6 {
   background-color: darkorange;
   border-color: darkorange;
 }
+
+.mensaje-error {
+  background-color: #ffe6e6;
+  border: 1px solid #ff6666;
+  color: #ff3333;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 5px;
+  margin-top: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
