--- a/otro/assets/css/style.css
+++ b/otro/assets/css/style.css
@@ -1254,3 +1254,8 @@ h6 {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
+
+.btn-delete {
+  padding: 2px 6px; /* Reducir el tamaño del botón */
+  font-size: 12px; /* Reducir el tamaño del texto */
+}
